# nebula

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
backend/: Dockerfile  README.md  app.py  jobs.db  main.py  pyproject.toml  requirements.txt
backend/api/v1/routers/: analysis.py
backend/api/v1/schemas/: analysis.py
backend/core/: config.py  db.py
backend/graph/: nodes.py  state.py  workflow.py
backend/services/: analysis_service.py  comparison.py  extraction.py  normalization.py
src/: auth.config.ts  auth.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/dashboard/: dashboard-client.tsx  page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/: app-sidebar.tsx  job-description.tsx  nav-main.tsx  nav-user.tsx  resume-evaluation.tsx  site-header.tsx
src/components/ui/: login-form.tsx  logout-button.tsx  signup-form.tsx
src/lib/: actions.ts  data.ts
