[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "urffsamhunt",email = "patelsameer1706@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "pdfplumber (>=0.11.7,<0.12.0)",
    "docx2txt (>=0.9,<0.10)",
    "uvicorn[standard] (>=0.36.0,<0.37.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "langgraph (>=0.6.7,<0.7.0)",
    "langchain-core (>=0.3.76,<0.4.0)",
    "sse-starlette (>=3.0.2,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
